--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+header{
+    display: flex;
+    justify-content: center;
+    height: 100px;
+    background: rgb(12,61,128);
+    background: linear-gradient(0deg, rgba(12,61,128,1) 0%, rgba(20,78,156,1) 31%, rgba(56,111,184,1) 48%, rgba(28,109,219,1) 68%, rgba(12,61,128,1) 100%);
+}
+header img{
+    height: 130px;
+    margin: 10px;
+    z-index: 1;
+}
+body {
+    padding: 0;
+    margin: 0px;
+    font-family: 'Press Start 2P', cursive;
+    background: rgb(242,144,144);
+    background: radial-gradient(circle, rgba(242,144,144,1) 0%, rgba(249,150,150,1) 33%, rgba(233,115,115,0.97) 56%, rgba(241,35,35,1) 100%);
+}
+footer{
+    background: rgb(12,61,128);
+    background: linear-gradient(0deg, rgba(12,61,128,1) 0%, rgba(20,78,156,1) 31%, rgba(56,111,184,1) 48%, rgba(28,109,219,1) 68%, rgba(12,61,128,1) 100%);
+    display: flex;
+    justify-content: center;
+}
+footer button{
+    cursor: pointer;
+    margin: 10px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 1.4rem;
+    padding: 10px 20px;
+    border-radius: 20px;
+    color: white;
+    text-shadow: 
+    -1px -1px 0 black,  /* Sombra superior izquierda */
+     1px -1px 0 black,  /* Sombra superior derecha */
+    -1px  1px 0 black,  /* Sombra inferior izquierda */
+     1px  1px 0 black;  
+    background-color: rgb(123, 255, 198);
+}
